<resources>
    <string name="app_name">PriceGuard</string>
    <string name="login">로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="e_mail">E-mail</string>
    <string name="password">비밀번호</string>
    <string name="not_a_member">회원이 아니신가요?</string>
    <string name="name">이름</string>
    <string name="retype_password">비밀번호 재입력</string>
    <string name="register">가입하기</string>
    <string name="my_page">내 정보</string>
    <string name="notification_setting">알림 설정</string>
    <string name="theme_setting">테마 설정</string>
    <string name="logout">로그아웃</string>
    <string name="invalid_name">이름은 16자 이내로 입력해 주세요.</string>
    <string name="invalid_email">유효하지 않은 이메일입니다.</string>
    <string name="valid_email">유효한 이메일입니다.</string>
    <string name="invalid_email_pattern">올바르지 않은 이메일 형식입니다.</string>
    <string name="invalid_password">비밀번호는 영문 대소문자, 숫자, 특수문자가 포함된 8~16자 사이어야 합니다.</string>
    <string name="valid_password">적합한 비밀번호입니다.</string>
    <string name="password_mismatch">비밀번호가 일치하지 않습니다.</string>
    <string name="password_match">비밀번호가 일치합니다.</string>
    <string name="login_fail">로그인 실패</string>
    <string name="login_fail_message">다시 시도해 주세요.</string>
    <string name="confirm">확인</string>
    <string name="login_invalid">유효하지 않은 입력입니다.</string>
    <string name="login_invalid_message">이메일과 비밀번호를 다시 확인해주세요.</string>
    <string name="error">오류</string>
    <string name="invalid_parameter">입력값이 유효하지 않습니다.</string>
    <string name="duplicate_email">이미 가입된 계정입니다.</string>
    <string name="undefined_error">오류가 발생했습니다. 다시 시도해 주세요.</string>
    <string name="menu_home">홈</string>
    <string name="menu_recommend">인기 상품</string>
    <string name="menu_my_page">내 설정</string>
    <string name="fragment_recommend_title">인기 상품</string>
    <string name="fragment_list_title">상품 목록</string>
    <string name="menu_refresh">refresh</string>
    <string name="product_list_add_product">상품 추가</string>
    <string name="recommand_rank">#%1$d</string>
    <string name="back">뒤로</string>
    <string name="next">다음</string>
    <string name="add_link_title">상품 링크를\n입력해 주세요</string>
    <string name="confirm_product_title">선택하신 상품을\n확인해 주세요</string>
    <string name="set_price_title">알림받을 목표가격을\n설정해 주세요</string>
    <string name="register_link">링크를 입력하세요.</string>
    <string name="how_get_product_link">\uD83D\uDD3A상품 링크는 어떻게 얻나요?</string>
    <string name="want_notification">에 알람을 받고 싶습니다.</string>
    <string name="goto_shopping_mall">쇼핑몰로 이동</string>
    <string name="add_to_tracking_list">트래킹 목록에 추가</string>
    <string name="edit_target_price">목표가격 수정</string>
    <string name="delete_tracking">트래킹 중지</string>
    <string name="already_tracking">이미 추적중이시군요!</string>
    <string name="want_to_buy_cheap">저렴하게 사고 싶으신가요?</string>
    <string name="price_track_graph">가격 변화 그래프</string>
    <string name="day">일</string>
    <string name="week">주</string>
    <string name="month">월</string>
    <string name="quarter">분기</string>
    <string name="logout_confirm_title">로그아웃 확인</string>
    <string name="logout_confirm_message">정말로 로그아웃 하시겠습니까?</string>
    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="opensource_license">오픈소스 라이선스</string>
    <string name="current_price_percent">현재 가격의 %d%%</string>
    <string name="over_current_price">현재 가격보다 목표 가격이 높습니다</string>
    <string name="not_link">유효하지 않은 링크입니다.</string>
    <string name="lowest_price">역대 최저가</string>
    <string name="target_price">목표 가격</string>
    <string name="invalid_access">잘못된 접근입니다.</string>
    <string name="product_not_found">상품 정보가 존재하지 않습니다.</string>
    <string name="logged_out">로그아웃 되었습니다. 다시 로그인하세요.</string>
    <string name="price">%s원</string>
    <string name="rank">트래킹 인기 상품 #%s위</string>
    <string name="permission_denied_title">인증 실패</string>
    <string name="permission_denied_message">인증에 실패하였습니다. 로그아웃합니다.</string>
    <string name="permission_denied_cancel">취소</string>
    <string name="stop_tracking_confirm">트래킹 중지 확인</string>
    <string name="stop_tracking_detail">트래킹을 중지하시면, 더 이상 목표가에 도달하여도 알림을 받을 수 없게 됩니다.</string>
    <string name="invalid_request">잘못된 요청입니다.</string>
    <string name="delete_success">삭제되었습니다.</string>
    <string name="cancel">취소</string>
    <string name="won">%s원</string>
    <string name="not_product_link">상품 정보가 없는 링크입니다.</string>
    <string name="error_add_product">상품 등록 실패</string>
    <string name="exist_product">이미 등록한 상품입니다.</string>료
    <string name="finish">완료</string>
    <string name="error_patch_price">가격 수정 실패</string>
    <string name="retry">다시 시도해 주세요.</string>
    <string name="comma_number">%,d</string>
    <string name="percent">%.1f%%</string>
    <string name="add_plus">+%1$s</string>
    <string name="success_add">등록 완료</string>
    <string name="success_update">수정 완료</string>
    <string name="success_add_message">상품 등록을 완료했습니다.</string>
    <string name="success_update_message">목표 가격 수정을 완료했습니다.</string>
    <string name="not_found">데이터가 없습니다.</string>
    <string name="recommended_product_failed">인기 상품 조회 실패</string>
    <string name="product_list_failed">내 상품 목록 조회 실패</string>
    <string name="delete_product_failed">트래킹 제거 실패</string>
    <string name="product_image">상품 이미지</string>
    <string name="shopping_mall_logo">쇼핑몰 로고</string>
    <string name="share_product">상품 공유하기</string>
    <string name="share_link_template">https://share.priceguard.app/%1$s?code=%2$s</string>
    <string name="share_message_template">[PriceGuard]\n이 상품 가격 같이 확인해요!\n\n%1$s</string>
    <string name="price_notification">상품 가격 알림</string>
    <string name="currently_notification_disabled">현재 알림 설정이 비활성화되어 있습니다.</string>
    <string name="setting">설정</string>
    <string name="use_dynamic_color">다이나믹 컬러 사용</string>
    <string name="dark_mode_setting">다크 모드 설정</string>
    <string name="use_system_setting">시스템 설정 사용</string>
    <string name="light_mode">라이트 모드</string>
    <string name="dark_mode">다크 모드</string>
    <string name="price_text">가격</string>
    <string name="date_text">시간</string>
    <string name="push_notification_not_working">푸시 알림이 정상작동하지 않을 수 있습니다.</string>
    <string name="edit_period">그래프 주기 설정</string>
    <string name="go_back">뒤로가기</string>
    <string name="single_product_notification_toggle">상품 %s 에 대한 개별 알림 토글</string>
    <string name="target_price_delta">현재가격은 설정한 목표가격의 %s</string>
    <string name="current_price_info">현재가격 %s</string>
    <string name="current_rank_info">인기 순위 %d위</string>
    <string name="product_shop">%s 상품</string>
    <string name="my_name_info">내 이름, %s</string>
    <string name="my_email_info">내 E-mail, %s</string>
    <string name="link_confirm_button">링크 확인 버튼</string>
    <string name="selected_product_image">선택한 상품의 이미지</string>
    <string name="product_name_info">상품명 %s</string>
    <string name="shopping_mall_name_info">쇼핑몰 이름, %s</string>
    <string name="target_price_input">목표가격 입력란</string>
    <string name="target_price_percent_and_price">목표가격 %1$s, %2$s으로 설정됨</string>
    <string name="target_price_80">현재 가격의 80%</string>
    <string name="lowest_price_info">역대 최저가 %s</string>
    <string name="target_price_info">목표 가격 %s 으로 설정됨</string>
    <string name="min_price">0</string>
    <string name="max_price">999999999</string>
    <string name="priceguard_push_alarm_title">Product Price Notification</string>
    <string name="failed_to_open_shop">쇼핑몰 이동이 불가합니다.</string>
    <string name="notify_target_price">%s원에 알림을 받고 싶습니다.</string>
    <string name="set_target_price_dialog_title">목표 가격을 입력해 주세요</string>
    <string name="target_price_error_message_over_100_million">목표 가격은 10억을 초과할 수 없습니다.</string>
    <string name="delete_account">회원 탈퇴</string>
    <string name="delete_account_confirm_title">회원 탈퇴 확인</string>
    <string name="delete_account_confirm_message">정말로 회원 탈퇴 하시겠습니까?</string>
    <string name="error_password">비밀번호 오류</string>
    <string name="wrong_password">입력한 비밀번호가 회원 정보와 맞지 않습니다.</string>
    <string name="caution_delete_account_title">회원 탈퇴 주의사항 안내</string>
    <string name="approve_remove_account">주의사항을 확인했으며, 데이터를 삭제하겠습니다.</string>
    <string name="caution_delete_account_body">- 회원 탈퇴 시, 계정과 관련된 모든 정보가 삭제되며, 복구가 불가능합니다. 이에 따라 저장된 모든 데이터, 설정, 기록 등이 손실됩니다.\n\n- 회원 탈퇴 후에는 애플리케이션의 모든 서비스와 컨텐츠에 접근할 수 없게 됩니다.\n\n- 탈퇴 후에는 계정에 연결된 모든 데이터와 정보를 되돌릴 수 없습니다. 주의깊게 검토한 후 탈퇴를 진행해 주세요
 \n</string>
    <string name="delete_account_activity_title">회원 정보를 확인하기 위해\n비밀번호를 입력해 주세요</string>
    <string name="success_delete_account">정상적으로 회원 탈퇴 되었습니다.</string>
    <string name="product_list_no_product">상품이 없습니다!\n 상품을 추가해주세요.</string>
    <string name="recommended_product_no_product">추천 상품이 준비중입니다.</string>
    <string name="sold_out">품절</string>
    <string name="error_maximum_count_exceeded">등록 가능한 상품 개수를 초과하였습니다.</string>
    <string name="error_get_is_email_verified">인증 정보를 가져오는데 실패하였습니다.</string>
    <string name="verified">인증됨</string>
    <string name="unverified">미인증</string>
    <string name="unverified_email">이메일 인증이 필요한 계정입니다.</string>
    <string name="update_cancel_warning">업데이트 미적용 시 앱 사용에 지장이 생길 수 있습니다.</string>
    <string name="update_failed">업데이트에 실패하였습니다. 다시 시도해 주세요.</string>
    <string name="warning">경고</string>
    <string name="must_update">필수 업데이트 미적용 시 앱 사용이 불가능 합니다.</string>
    <string name="reset_password">비밀번호 재설정</string>
    <string name="verify_email">이메일 인증</string>
    <string name="verification_number">인증번호</string>
    <string name="verification">인증</string>
    <string name="match_error_verification_code">인증번호가 일치하지 않습니다</string>
    <string name="error_verify_email">이메일 인증 실패</string>
    <string name="error_request_verification_code">인증 요청 실패</string>
    <string name="sent_verification_code">인증 번호를 전송했습니다.</string>
    <string name="verify_email_content_find_password">비밀번호 찾기 위해\n이메일을 인증해 주세요.</string>
    <string name="reset_password_content">새로운 비밀번호로 재설정해 주세요.</string>
    <string name="find_password_title_1">비밀번호 찾기 (1/2)</string>
    <string name="find_password_title_2">비밀번호 찾기 (2/2)</string>
    <string name="finish_send_verification_code">인증번호 전송 완료 %s</string>
    <string name="expired">만료됨</string>
    <string name="request_verification_code_limit_max_5">인증번호는 하루 최대 5번까지 전송 가능합니다.</string>
    <string name="success_reset_password_retry_login">비밀번호가 재설정되었습니다.\n다시 로그인해 주세요</string>
    <string name="finish_find_password">비밀번호 찾기 완료</string>
    <string name="expire_verification_code">인증번호가 만료되었습니다.</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="re_send">재전송</string>
    <string name="succes_email_verification">이메일 인증을 완료했습니다.</string>
    <string name="verify_email_content">이메일 인증을 완료해 주세요.</string>
    <string name="error_email">이메일 오류</string>
    <string name="not_found_email">등록되지 않은 이메일입니다.</string>
</resources>