<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_vertical_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_vertical_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/abl_signup_topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/ctl_signup_topbar"
            style="?attr/collapsingToolbarLayoutLargeStyle"
            android:layout_width="match_parent"
            android:layout_height="?attr/collapsingToolbarLayoutLargeSize"
            android:background="?attr/colorSurface">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/mt_signup_topbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="0dp"
                app:navigationIcon="@drawable/ic_back"
                app:title="@string/sign_up" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_signup_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/name"
        app:layout_constraintEnd_toStartOf="@+id/gl_vertical_end"
        app:layout_constraintStart_toEndOf="@+id/gl_vertical_start"
        app:layout_constraintTop_toBottomOf="@+id/abl_signup_topbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_signup_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_signup_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/e_mail"
        app:layout_constraintEnd_toStartOf="@+id/gl_vertical_end"
        app:layout_constraintStart_toEndOf="@+id/gl_vertical_start"
        app:layout_constraintTop_toBottomOf="@+id/til_signup_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_signup_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        app:layout_constraintEnd_toStartOf="@+id/gl_vertical_end"
        app:layout_constraintStart_toEndOf="@+id/gl_vertical_start"
        app:layout_constraintTop_toBottomOf="@+id/til_signup_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_signup_retype_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/retype_password"
        app:layout_constraintEnd_toStartOf="@+id/gl_vertical_end"
        app:layout_constraintStart_toEndOf="@+id/gl_vertical_start"
        app:layout_constraintTop_toBottomOf="@+id/til_signup_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_signup_retype_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_signup_signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/register"
        app:layout_constraintEnd_toStartOf="@+id/gl_vertical_end"
        app:layout_constraintStart_toEndOf="@+id/gl_vertical_start"
        app:layout_constraintTop_toBottomOf="@+id/til_signup_retype_password" />

</androidx.constraintlayout.widget.ConstraintLayout>