<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv_email_verification_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_email_verification"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorSurface">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_vertical_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_vertical_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <TextView
                android:id="@+id/tv_email_verification_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="96dp"
                android:text="@string/verify_email"
                android:textAppearance="?attr/textAppearanceHeadlineMedium"
                app:layout_constraintStart_toEndOf="@id/gl_vertical_start"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email_verification_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/e_mail"
                app:layout_constraintEnd_toStartOf="@id/btn_email_verification_verify"
                app:layout_constraintStart_toEndOf="@id/gl_vertical_start"
                app:layout_constraintTop_toBottomOf="@id/tv_email_verification_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_email_verification_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="emailAddress"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_email_verification_verify"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="52dp"
                android:layout_height="0dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_round_corner"
                android:padding="0dp"
                android:text="@string/verification"
                app:layout_constraintBottom_toBottomOf="@id/til_email_verification_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/til_email_verification_email" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email_verification_num"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:hint="@string/verification_number"
                app:helperText=" "
                app:layout_constraintEnd_toEndOf="@id/btn_email_verification_verify"
                app:layout_constraintStart_toStartOf="@id/til_email_verification_email"
                app:layout_constraintTop_toBottomOf="@id/til_email_verification_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_email_verification_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_email_verification_back"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="80dp"
                android:text="@string/back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/gl_vertical_start"
                app:layout_constraintTop_toBottomOf="@+id/til_email_verification_num"
                app:layout_constraintVertical_bias="1.0" />

            <Button
                android:id="@+id/btn_email_verification_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                app:layout_constraintBottom_toBottomOf="@id/btn_email_verification_back"
                app:layout_constraintEnd_toStartOf="@id/gl_vertical_end" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>